Implement cancel trip request
